2016-03-09 Allin Cottrell  <cottrell@wfu.edu>

	* configure.in:  Backport configuration tweak for wxt on OSX.
	Do not assume that wxwidgets uses the gtk2 toolkit.
	It might use gtk3 or on OSX it might use cocoa.

	* term/aquaterm.trm: Incorrect argument type to abs() or fabs().

2016-03-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_set_linewidth):  Change the 
	minimum linewidth supported by pdfcairo to match the other cairo 
	terminals.  Reduce it for all of them to 0.20 pt (was 0.25 or 0.50).

2016-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* graphics.c (map_position_double): Fix stupid typo that tried to map a
	linked y axis through the x mapping function. This always mis-placed
	objects and labels whose position is given in terms of y2 whenever y2 is
	linked to y1. Furthermore placement on either x2 or y2 could be wrong if
	the most recent plot did not use that same linked axis.

2016-02-22  Release 5.0.3

2016-02-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile:  Use gnuplot's default settings to generate
	plots for the documentation.  Use MinGW's own implementations of
	printf etc. which are C99 compliant.

	* src/qtterminal/qt_term.h src/qtterminal/qt_conversion.cpp:  isnan()
	is in namespace std.  -- Reverted since not all relevant compilers
	follow the C++11 standard just yet.

	* src/win/wtext.h:  Avoid warnings about the re-definition of
	popen/pclose with fake pipe support using MSYS2/Mingw-w64.

	* src/wxterminal/wxt_gui.cpp|h:  Fixes to make the wxt terminal work
	with wxWidgets 3 on Windows:
	1) Disable wxWidgets debug assertions in release builds. This does 
	not solve the problem with a setlocale(LC_ALL, NULL) == "C" test in 
	wxLocale, but at least gets rid of the warning.
	2) Flush the cairo surface before blitting the internal bitmap to
	screen.

	* src/win/wgraph.c:  Include direct.h for _chdir().

	* term/tkcanvas.trm (TK_init):  TK_image requires WRITE_PNG_IMAGE to be